--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "laravel-elixir-webpack-official": "^1.0.9",
     "laravel-elixir-browserify-official": "^0.1.3",
     "laravel-elixir-browsersync-official": "^1.0.0"
+  },
+  "dependencies": {
+    "moment": "^2.17.1"
   }
 }
