changed name and author

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "insideout-static-ui",
+  "name": "jw-static-ui",
   "version": "1.0.0",
   "description": "",
   "main": "Gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Jeff Winegar",
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.1",
