--- a/package.json
+++ b/package.json
@@ -8,23 +8,25 @@
     "@mdx-js/mdx": "^1.6.16",
     "@mdx-js/react": "^1.6.16",
     "babel-plugin-styled-components": "^1.11.1",
-    "gatsby": "^2.24.47",
+    "gatsby": "^2.24.53",
     "gatsby-image": "^2.4.16",
-    "gatsby-plugin-manifest": "^2.4.23",
-    "gatsby-plugin-mdx": "^1.2.34",
-    "gatsby-plugin-offline": "^3.2.23",
+    "gatsby-plugin-manifest": "^2.4.27",
+    "gatsby-plugin-mdx": "^1.2.37",
+    "gatsby-plugin-offline": "^3.2.26",
     "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-plugin-sharp": "^2.6.27",
+    "gatsby-plugin-react-svg": "^3.0.0",
+    "gatsby-plugin-sharp": "^2.6.31",
     "gatsby-plugin-styled-components": "^3.3.10",
-    "gatsby-source-filesystem": "^2.3.24",
-    "gatsby-transformer-sharp": "^2.5.13",
+    "gatsby-source-filesystem": "^2.3.27",
+    "gatsby-source-github-api": "^0.2.1",
+    "gatsby-transformer-sharp": "^2.5.14",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
-    "prettier": "^2.0.5"
+    "prettier": "^2.1.1"
   },
   "keywords": [
     "gatsby"
@@ -41,9 +43,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jwinegar/personal-site"
+    "url": "https://github.com/jeffwinegar/personal-site"
   },
   "bugs": {
-    "url": "https://github.com/jwinegar/personal-site/issues"
+    "url": "https://github.com/jeffwinegar/personal-site/issues"
   }
 }
