--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-plugin-styled-components": "^1.11.1",
     "gatsby": "^2.24.53",
     "gatsby-image": "^2.4.16",
+    "gatsby-plugin-google-analytics": "^2.3.13",
     "gatsby-plugin-manifest": "^2.4.27",
     "gatsby-plugin-mdx": "^1.2.37",
     "gatsby-plugin-offline": "^3.2.26",
