--- a/package.json
+++ b/package.json
@@ -5,29 +5,29 @@
   "version": "0.1.0",
   "author": "Jeff Winegar <winegarj@gmail.com>",
   "dependencies": {
-    "@mdx-js/mdx": "^1.6.16",
-    "@mdx-js/react": "^1.6.16",
+    "@mdx-js/mdx": "^1.6.18",
+    "@mdx-js/react": "^1.6.18",
     "babel-plugin-styled-components": "^1.11.1",
-    "gatsby": "^2.24.53",
-    "gatsby-image": "^2.4.16",
-    "gatsby-plugin-google-analytics": "^2.3.13",
-    "gatsby-plugin-manifest": "^2.4.27",
-    "gatsby-plugin-mdx": "^1.2.37",
-    "gatsby-plugin-offline": "^3.2.26",
-    "gatsby-plugin-react-helmet": "^3.3.10",
+    "gatsby": "^2.24.65",
+    "gatsby-image": "^2.4.19",
+    "gatsby-plugin-google-analytics": "^2.3.14",
+    "gatsby-plugin-manifest": "^2.4.31",
+    "gatsby-plugin-mdx": "^1.2.41",
+    "gatsby-plugin-offline": "^3.2.28",
+    "gatsby-plugin-react-helmet": "^3.3.11",
     "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.6.31",
-    "gatsby-plugin-styled-components": "^3.3.10",
-    "gatsby-source-filesystem": "^2.3.27",
+    "gatsby-plugin-sharp": "^2.6.36",
+    "gatsby-plugin-styled-components": "^3.3.11",
+    "gatsby-source-filesystem": "^2.3.30",
     "gatsby-source-github-api": "^0.2.1",
-    "gatsby-transformer-sharp": "^2.5.14",
+    "gatsby-transformer-sharp": "^2.5.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
-    "prettier": "^2.1.1"
+    "prettier": "^2.1.2"
   },
   "keywords": [
     "gatsby"
@@ -36,7 +36,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "format": "prettier --write \"**/*.{js,jsx,json,md,mdx}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
