--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,14 @@
 [build.environment]
-  GATSBY_URL = process.env.URL
+  GATSBY_URL = "process.env.URL"
 
 [[plugins]]
   package = "netlify-plugin-gatsby-cache"
+
+[[header]]
+  "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+    Feature-Policy = "accelerometer 'none'; camera 'none'; geolocation 'none'; gyroscope 'none'; magnetometer 'none'; microphone 'none'; payment 'none'; usb 'none'"
+    Permissions-Policy = "accelerometer=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()"
