updates netlify configuration; fixes typo

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "GATSBY_URL=$URL gatsby build"
+  environment = { GATSBY_URL = "$URL" }
 
 [[plugins]]
   package = "netlify-plugin-gatsby-cache"
