--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  environment = { GATSBY_URL = "$URL" }
+  environment = { GATSBY_URL = $URL }
 
 [[plugins]]
   package = "netlify-plugin-gatsby-cache"
