--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^7.0.1",
     "babel-eslint": "^10.1.0",
+    "cypress": "^5.4.0",
     "eslint": "^7.11.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "^4.0.2",
+    "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.21.4",
@@ -47,6 +50,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
+    "cy:open": "cypress open",
     "lint": "eslint .",
     "format": "prettier --write \"**/*.{js,jsx,json,md,mdx}\"",
     "start": "npm run develop",
