--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
   },
   "devDependencies": {
     "@testing-library/cypress": "^7.0.1",
+    "@testing-library/react": "^11.1.0",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.5.2",
+    "babel-preset-gatsby": "^0.5.14",
     "cypress": "^5.4.0",
     "eslint": "^7.11.0",
     "eslint-config-react-app": "^5.2.1",
@@ -40,6 +43,8 @@
     "eslint-plugin-react-hooks": "^4.1.2",
     "gatsby-plugin-eslint": "^2.0.8",
     "husky": "^4.3.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.5.3",
     "lint-staged": "^10.4.0",
     "prettier": "^2.1.2"
   },
@@ -56,7 +61,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "jest"
   },
   "husky": {
     "hooks": {
