--- a/package.json
+++ b/package.json
@@ -8,31 +8,33 @@
     "@mdx-js/mdx": "^1.6.19",
     "@mdx-js/react": "^1.6.19",
     "babel-plugin-styled-components": "^1.11.1",
-    "gatsby": "^2.24.91",
+    "gatsby": "^2.25.1",
     "gatsby-image": "^2.4.21",
-    "gatsby-plugin-google-analytics": "^2.3.19",
-    "gatsby-plugin-manifest": "^2.4.37",
-    "gatsby-plugin-mdx": "^1.2.52",
-    "gatsby-plugin-offline": "^3.2.38",
+    "gatsby-plugin-google-analytics": "^2.4.0",
+    "gatsby-plugin-manifest": "^2.5.1",
+    "gatsby-plugin-mdx": "^1.3.0",
+    "gatsby-plugin-offline": "^3.3.1",
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.6.43",
+    "gatsby-plugin-sharp": "^2.7.0",
     "gatsby-plugin-styled-components": "^3.3.14",
-    "gatsby-source-filesystem": "^2.3.37",
+    "gatsby-source-filesystem": "^2.4.0",
     "gatsby-source-github-api": "^0.2.1",
-    "gatsby-transformer-sharp": "^2.5.20",
+    "gatsby-transformer-sharp": "^2.5.21",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@testing-library/cypress": "^7.0.1",
-    "@testing-library/react": "^11.1.0",
+    "@testing-library/react": "^11.1.1",
+    "axe-core": "^4.0.2",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.1",
-    "babel-preset-gatsby": "^0.5.14",
+    "babel-jest": "^26.6.2",
+    "babel-preset-gatsby": "^0.5.15",
     "cypress": "^5.5.0",
+    "cypress-axe": "^0.10.0",
     "eslint": "^7.12.1",
     "eslint-config-react-app": "^6.0.0",
     "eslint-loader": "^4.0.2",
@@ -44,9 +46,10 @@
     "gatsby-plugin-eslint": "^2.0.8",
     "husky": "^4.3.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.1",
-    "lint-staged": "^10.5.0",
-    "prettier": "^2.1.2"
+    "jest": "^26.6.2",
+    "lint-staged": "^10.5.1",
+    "prettier": "^2.1.2",
+    "start-server-and-test": "^1.11.5"
   },
   "keywords": [
     "gatsby"
@@ -57,11 +60,13 @@
     "develop": "gatsby develop",
     "cy:open": "cypress open",
     "lint": "eslint .",
-    "format": "prettier --write \"**/*.{js,jsx,json,md,mdx}\"",
+    "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|graphql|md|mdx)\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "jest"
+    "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch"
   },
   "husky": {
     "hooks": {
