--- a/package.json
+++ b/package.json
@@ -5,22 +5,22 @@
   "version": "0.1.0",
   "author": "Jeff Winegar <winegarj@gmail.com>",
   "dependencies": {
-    "@mdx-js/mdx": "^1.6.19",
-    "@mdx-js/react": "^1.6.19",
+    "@mdx-js/mdx": "^1.6.21",
+    "@mdx-js/react": "^1.6.21",
     "babel-plugin-styled-components": "^1.11.1",
-    "gatsby": "^2.25.1",
-    "gatsby-image": "^2.4.21",
-    "gatsby-plugin-google-analytics": "^2.4.0",
-    "gatsby-plugin-manifest": "^2.5.1",
-    "gatsby-plugin-mdx": "^1.3.0",
-    "gatsby-plugin-offline": "^3.3.1",
-    "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby": "^2.27.0",
+    "gatsby-image": "^2.6.0",
+    "gatsby-plugin-google-analytics": "^2.6.0",
+    "gatsby-plugin-manifest": "^2.7.0",
+    "gatsby-plugin-mdx": "^1.5.0",
+    "gatsby-plugin-offline": "^3.5.0",
+    "gatsby-plugin-react-helmet": "^3.5.0",
     "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.7.0",
-    "gatsby-plugin-styled-components": "^3.3.14",
-    "gatsby-source-filesystem": "^2.4.0",
+    "gatsby-plugin-sharp": "^2.9.0",
+    "gatsby-plugin-styled-components": "^3.5.0",
+    "gatsby-source-filesystem": "^2.6.0",
     "gatsby-source-github-api": "^0.2.1",
-    "gatsby-transformer-sharp": "^2.5.21",
+    "gatsby-transformer-sharp": "^2.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
@@ -28,14 +28,14 @@
   },
   "devDependencies": {
     "@testing-library/cypress": "^7.0.1",
-    "@testing-library/react": "^11.1.1",
-    "axe-core": "^4.0.2",
+    "@testing-library/react": "^11.2.1",
+    "axe-core": "^4.1.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.2",
-    "babel-preset-gatsby": "^0.5.15",
-    "cypress": "^5.5.0",
+    "babel-jest": "^26.6.3",
+    "babel-preset-gatsby": "^0.7.0",
+    "cypress": "^5.6.0",
     "cypress-axe": "^0.10.0",
-    "eslint": "^7.12.1",
+    "eslint": "^7.13.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-cypress": "^2.11.2",
@@ -46,7 +46,7 @@
     "gatsby-plugin-eslint": "^2.0.8",
     "husky": "^4.3.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.2",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.1",
     "prettier": "^2.1.2",
     "start-server-and-test": "^1.11.5"
@@ -58,13 +58,15 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "cy:open": "cypress open",
+    "start": "npm run develop",
+    "serve": "gatsby serve --port 9090",
+    "clean": "gatsby clean",
     "lint": "eslint .",
     "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|graphql|md|mdx)\"",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open",
+    "cy:open": "cypress open",
+    "cy:run": "CYPRESS_BASE_URL=http://localhost:9090 cypress run",
+    "test:e2e:dev": "start-server-and-test develop http://localhost:8000 cy:open",
+    "test:e2e:ci": "start-server-and-test serve http://localhost:9090 cy:run",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch"
   },
