--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.1",
+    "netlify-plugin-cypress": "^1.4.1",
     "prettier": "^2.1.2",
     "start-server-and-test": "^1.11.5"
   },
