--- a/netlify.toml
+++ b/netlify.toml
@@ -7,7 +7,7 @@
   TERM = "xterm"
 
 [[plugins]]
-  package = "netlify-plugin-gatsby-cache"
+  package = "@netlify/plugin-gatsby"
 
 [[plugins]]
   package = "netlify-plugin-cypress"
