--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@netlify/plugin-gatsby": "^2.0.0-beta",
     "@testing-library/cypress": "^8.0.1",
     "@testing-library/react": "^12.1.2",
     "axe-core": "^4.3.5",
@@ -44,6 +45,7 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.3.0",
     "gatsby-plugin-eslint": "^4.0.1",
+    "gatsby-plugin-netlify": "^4.0.0-next.0",
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.3.1",
