--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-webpack-plugin": "^3.1.1",
     "gatsby-plugin-eslint": "^4.0.2",
     "gatsby-plugin-netlify": "^4.0.0-next.0",
     "husky": "^7.0.4",
