--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "babel-plugin-styled-components": "^2.0.2",
     "date-fns": "^2.27.0",
     "gatsby": "^4.3.0",
-    "gatsby-plugin-google-gtag": "^4.3.0",
     "gatsby-plugin-image": "^2.3.0",
     "gatsby-plugin-manifest": "^4.3.0",
     "gatsby-plugin-mdx": "^3.3.0",
     "gatsby-plugin-offline": "^5.3.0",
+    "gatsby-plugin-plausible": "^0.0.7",
     "gatsby-plugin-react-helmet": "^5.3.0",
     "gatsby-plugin-react-svg": "^3.1.0",
     "gatsby-plugin-sharp": "^4.3.0",
