--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "gatsby-plugin-plausible": "^0.0.7",
     "gatsby-plugin-react-helmet": "^5.3.0",
     "gatsby-plugin-react-svg": "^3.1.0",
+    "gatsby-plugin-robots-txt": "^1.6.14",
     "gatsby-plugin-sharp": "^4.3.0",
+    "gatsby-plugin-sitemap": "^5.3.0",
     "gatsby-plugin-styled-components": "^5.3.0",
     "gatsby-remark-autolink-headers": "^5.3.0",
     "gatsby-remark-shiki-twoslash": "^3.0.31",
