--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "gatsby-plugin-sitemap": "^5.4.0",
     "gatsby-plugin-styled-components": "^5.4.0",
     "gatsby-remark-autolink-headers": "^5.4.0",
-    "gatsby-remark-shiki-twoslash": "^3.0.31",
+    "gatsby-remark-shiki-twoslash": "^3.0.32",
     "gatsby-source-filesystem": "^4.4.0",
     "gatsby-source-github-api": "^1.0.0",
     "gatsby-transformer-sharp": "^4.4.0",
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "@fec/remark-a11y-emoji": "^3.1.0",
-    "@netlify/plugin-gatsby": "^2.0.0-beta",
+    "@netlify/plugin-gatsby": "^2.0.2",
     "@testing-library/cypress": "^8.0.2",
     "@testing-library/react": "^12.1.2",
     "axe-core": "^4.3.5",
