--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
     "@mdx-js/react": "^1.6.22",
     "babel-plugin-styled-components": "^2.0.2",
     "date-fns": "^2.28.0",
-    "gatsby": "^4.4.0",
-    "gatsby-plugin-image": "^2.4.0",
-    "gatsby-plugin-manifest": "^4.4.0",
-    "gatsby-plugin-mdx": "^3.4.0",
-    "gatsby-plugin-offline": "^5.4.0",
+    "gatsby": "^4.7.1",
+    "gatsby-plugin-image": "^2.7.0",
+    "gatsby-plugin-manifest": "^4.7.0",
+    "gatsby-plugin-mdx": "^3.7.0",
+    "gatsby-plugin-offline": "^5.7.0",
     "gatsby-plugin-plausible": "^0.0.7",
-    "gatsby-plugin-react-helmet": "^5.4.0",
+    "gatsby-plugin-react-helmet": "^5.7.0",
     "gatsby-plugin-react-svg": "^3.1.0",
-    "gatsby-plugin-robots-txt": "^1.6.14",
-    "gatsby-plugin-sharp": "^4.4.0",
-    "gatsby-plugin-sitemap": "^5.4.0",
-    "gatsby-plugin-styled-components": "^5.4.0",
-    "gatsby-remark-autolink-headers": "^5.4.0",
+    "gatsby-plugin-robots-txt": "^1.7.0",
+    "gatsby-plugin-sharp": "^4.7.0",
+    "gatsby-plugin-sitemap": "^5.7.0",
+    "gatsby-plugin-styled-components": "^5.7.0",
+    "gatsby-remark-autolink-headers": "^5.7.0",
     "gatsby-remark-shiki-twoslash": "^3.0.32",
-    "gatsby-source-filesystem": "^4.4.0",
+    "gatsby-source-filesystem": "^4.7.0",
     "gatsby-source-github-api": "^1.0.0",
-    "gatsby-transformer-sharp": "^4.4.0",
+    "gatsby-transformer-sharp": "^4.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
@@ -37,13 +37,13 @@
     "@netlify/plugin-gatsby": "^2.0.2",
     "@testing-library/cypress": "^8.0.2",
     "@testing-library/react": "^12.1.2",
-    "axe-core": "^4.3.5",
+    "axe-core": "^4.4.1",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^27.4.5",
-    "babel-preset-gatsby": "^2.4.0",
-    "cypress": "^9.2.0",
+    "babel-jest": "^27.5.1",
+    "babel-preset-gatsby": "^2.7.0",
+    "cypress": "^9.4.1",
     "cypress-axe": "^0.13.0",
-    "eslint": "^8.6.0",
+    "eslint": "^8.9.0",
     "eslint-config-react-app": "^7.0.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-cypress": "^2.12.1",
@@ -53,11 +53,11 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-webpack-plugin": "^3.1.1",
     "gatsby-plugin-eslint": "^4.0.2",
-    "gatsby-plugin-netlify": "^4.0.0-next.0",
+    "gatsby-plugin-netlify": "^4.1.0",
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.4.5",
-    "lint-staged": "^12.1.5",
+    "jest": "^27.5.1",
+    "lint-staged": "^12.3.4",
     "netlify-plugin-cypress": "^2.2.0",
     "prettier": "^2.5.1",
     "start-server-and-test": "^1.14.0"
