--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "spacegray-vscode": "github:ionutvmi/spacegray-vscode",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "use-persisted-state": "^0.3.3"
   },
   "devDependencies": {
     "@fec/remark-a11y-emoji": "^3.1.0",
