--- a/package.json
+++ b/package.json
@@ -1,92 +1,34 @@
 {
-  "name": "jeff-winegar-site",
+  "name": "new-site",
+  "version": "0.1.0",
   "private": true,
-  "description": "",
-  "version": "1.0.0",
-  "author": "Jeff Winegar <winegarj@gmail.com>",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "postinstall": "prisma generate"
+  },
   "dependencies": {
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
-    "babel-plugin-styled-components": "^2.0.7",
-    "date-fns": "^2.28.0",
-    "gatsby": "^4.13.1",
-    "gatsby-plugin-image": "^2.13.0",
-    "gatsby-plugin-mdx": "^3.13.0",
-    "gatsby-plugin-offline": "^5.13.0",
-    "gatsby-plugin-plausible": "^0.0.7",
-    "gatsby-plugin-react-helmet": "^5.13.0",
-    "gatsby-plugin-react-svg": "^3.1.0",
-    "gatsby-plugin-robots-txt": "^1.7.1",
-    "gatsby-plugin-sharp": "^4.13.0",
-    "gatsby-plugin-sitemap": "^5.13.0",
-    "gatsby-plugin-styled-components": "^5.13.0",
-    "gatsby-remark-autolink-headers": "^5.13.0",
-    "gatsby-remark-shiki-twoslash": "^3.0.34",
-    "gatsby-source-filesystem": "^4.13.0",
-    "gatsby-source-github-api": "^1.0.0",
-    "gatsby-transformer-sharp": "^4.13.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-helmet": "^6.1.0",
-    "spacegray-vscode": "github:ionutvmi/spacegray-vscode",
-    "styled-components": "^5.3.5",
-    "use-persisted-state": "^0.3.3"
+    "@prisma/client": "^4.0.0",
+    "@trpc/client": "^9.26.0",
+    "@trpc/next": "^9.26.0",
+    "@trpc/react": "^9.26.0",
+    "@trpc/server": "^9.26.0",
+    "next": "12.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-query": "^3.39.1",
+    "superjson": "^1.9.1",
+    "zod": "^3.17.3"
   },
   "devDependencies": {
-    "@fec/remark-a11y-emoji": "^3.1.0",
-    "@netlify/plugin-gatsby": "^3.0.0",
-    "@testing-library/cypress": "^8.0.2",
-    "@testing-library/react": "^13.2.0",
-    "axe-core": "^4.4.1",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^28.0.3",
-    "babel-preset-gatsby": "^2.13.0",
-    "cypress": "^9.6.0",
-    "cypress-axe": "^0.14.0",
-    "eslint": "^8.14.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.5.0",
-    "eslint-webpack-plugin": "^3.1.1",
-    "gatsby-plugin-eslint": "^4.0.2",
-    "gatsby-plugin-netlify": "^4.3.1",
-    "husky": "^7.0.4",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^28.0.3",
-    "lint-staged": "^12.4.1",
-    "netlify-plugin-cypress": "^2.2.0",
-    "prettier": "^2.6.2",
-    "start-server-and-test": "^1.14.0"
-  },
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "MIT",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "start": "netlify dev",
-    "serve": "gatsby serve --port 9090",
-    "clean": "gatsby clean",
-    "lint": "eslint .",
-    "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|graphql|md|mdx)\"",
-    "cy:open": "cypress open",
-    "cy:run": "CYPRESS_BASE_URL=http://localhost:9090 cypress run",
-    "test:e2e:dev": "start-server-and-test develop http://localhost:8000 cy:open",
-    "test:e2e:ci": "start-server-and-test serve http://localhost:9090 cy:run",
-    "test:coverage": "jest --coverage",
-    "test:watch": "jest --watch",
-    "prepare": "husky install"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jeffwinegar/personal-site"
-  },
-  "bugs": {
-    "url": "https://github.com/jeffwinegar/personal-site/issues"
+    "@types/node": "18.0.0",
+    "@types/react": "18.0.14",
+    "@types/react-dom": "18.0.5",
+    "eslint": "8.18.0",
+    "eslint-config-next": "12.1.6",
+    "prisma": "^4.0.0",
+    "typescript": "4.7.4"
   }
 }
