--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
-  "name": "new-site",
-  "version": "0.1.0",
+  "name": "jeffwinegar-site",
+  "version": "1.0.0",
   "private": true,
+  "author": "Jeff Winegar <winegarj@gmail.com>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jeffwinegar/personal-site"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "prepare": "husky install"
   },
   "dependencies": {
-    "@prisma/client": "^4.0.0",
-    "@trpc/client": "^9.26.0",
-    "@trpc/next": "^9.26.0",
-    "@trpc/react": "^9.26.0",
-    "@trpc/server": "^9.26.0",
-    "next": "12.2.0",
+    "@prisma/client": "^4.1.0",
+    "@trpc/client": "^9.26.2",
+    "@trpc/next": "^9.26.2",
+    "@trpc/react": "^9.26.2",
+    "@trpc/server": "^9.26.2",
+    "next": "12.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-query": "^3.39.1",
+    "react-query": "^3.39.2",
     "superjson": "^1.9.1",
     "zod": "^3.17.3"
   },
@@ -27,8 +34,11 @@
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
-    "prisma": "^4.0.0",
+    "eslint-config-next": "12.2.1",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
+    "prisma": "^4.1.0",
     "typescript": "4.7.4"
   }
 }
