--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^1.3.1",
     "@octokit/request": "^6.2.3",
     "astro": "^2.2.1",
     "astro-icon": "^0.8.0",
