--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && tsc --noEmit && astro build",
+    "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/sitemap": "^1.3.1",
-    "@octokit/request": "^6.2.3",
-    "astro": "^2.2.1",
+    "@octokit/request": "^6.2.5",
+    "astro": "^2.5.5",
     "astro-icon": "^0.8.0",
     "reading-time": "^1.5.0"
   },
