--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -18,6 +18,7 @@
     "reading-time": "^1.5.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
     "gemoji": "^8.1.0",
     "rehype-accessible-emojis": "^0.3.2"
   }
