--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/preact": "^2.2.1",
     "@astrojs/sitemap": "^1.3.1",
     "@octokit/request": "^6.2.5",
     "astro": "^2.5.5",
     "astro-icon": "^0.8.0",
+    "preact": "^10.15.1",
     "reading-time": "^1.5.0"
   },
   "devDependencies": {
