feat: rebuild using astro (#56)
* wip: initial basic astro install

* build: add netlify.toml

* feat: add global styles; initial content of index page

* feat: add featured github repos; update content; bump astro

* build: add .nvmrc

* wip: add blog posts using content collection and start outputting post data

* build: bump Astro to 2.1.7

* refactor: use InferStaticPropTypes instead of CollectionEntry for prop type definitions

* build: bump Astro to 2.1.9

* build: bump Astro to 2.2.1

* add post styles and additional structure

* feat: add table of contents

* feat: add accessible emoji component

* feat: remove extra space around emoji

* feat: clean up props

* feat: add SEO tags

* fix: add site url to astro config

* feat: update share description

* feat: add SEO component

* feat: update index description

* feat: clean up styles

* feat: add sitemap and robots.txt

* fix: exclude robots.txt from sitemap

* fix: exclude robots.txt from sitemap

* fix: exclude robots.txt from sitemap

* fix: exclude robots.txt from sitemap

* refactor: use inferred types for seoMeta

* build: add type checking to build script

* fix: fix build type check errors

* fix: remove tsc check on build

* build: add autoprefixer

* feat: add preact ThemeToggle component

* feat: add set initial theme

* fix: moved set initial theme into head script

* refactor: move getInitalColorScheme into a variable

* feat: add styles for color scheme toggle and reneame component

* feat: add styles for footer alignment

* feat: add proxy for plausible

* refactor: change to colorSchemeStore

* feat: update color system

* refactor: test environment output

* refactor: test environment output

* refactor: add condition to render analytics script only on production

* build: update package.json and README

* feat: update uses post

* build: bump packages

* fix: added check for localStorage item in ini

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,16 @@
 [build]
-  command = "GATSBY_URL=$URL gatsby build"
-  publish = "public"
+  command = "npm run build"
+  publish = "dist"
 
-[build.environment]
-  CYPRESS_CACHE_FOLDER = "./node_modules/CypressBinary"
-  TERM = "xterm"
+[[redirects]]
+  from = "/stats/js/script.js"
+  to = "https://plausible.io/js/script.js"
+  status = 200
 
-[[plugins]]
-  package = "@netlify/plugin-gatsby"
+[[redirects]]
+  from = "/stats/api/event"
+  to = "https://plausible.io/api/event"
+  status = 200
 
-[[plugins]]
-  package = "netlify-plugin-cypress"
-    [plugins.inputs]
-      record = true
+[dev]
+  framework = "astro"
