--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "astro": "^3.1.1",
     "astro-icon": "^0.8.1",
     "preact": "^10.17.1",
-    "reading-time": "^1.5.0"
+    "reading-time": "^1.5.0",
+    "remark-shiki-twoslash": "^3.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.15",
